--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,5 +24,7 @@ jobs:
     steps:
       - name: Pull Image from Docker Hub
         run: docker pull abhiraj405/sms-server:latest
+      - name: Stop and Remove Old Container
+        run: docker rm -f mern-sms-server-container
       - name: Run Docker Container
         run: docker run -d -p 5000:5000 --name mern-sms-server-container -e MONGO_URL='${{ secrets.MONGO_URL }}' abhiraj405/sms-server:latest
